--- a/tmux.conf
+++ b/tmux.conf
@@ -12,15 +12,15 @@ unbind '"'
 unbind %
 
 # Enable mouse control (clickable windows, panes, resizable panes)
-set -g mouse on
-# # set mouse on with prefix m
-bind m \
-    set -g mouse on \;\
-    display 'Mouse: ON'
-# set mouse off with prefix M
-bind M \
-    set -g mouse off \;\
-    display 'Mouse: OFF'
+#set -g mouse on
+## # set mouse on with prefix m
+#bind m \
+#    set -g mouse on \;\
+#    display 'Mouse: ON'
+## set mouse off with prefix M
+#bind M \
+#    set -g mouse off \;\
+#    display 'Mouse: OFF'
 # enable vi-style movement and copy/pasting
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
@@ -30,7 +30,7 @@ bind-key -t vi-copy 'y' copy-selection
 bind r source-file ~/.tmux.conf
 
 #restore clipboard sanity
-set -g default-command "reattach-to-user-namespace -l bash"
+#set -g default-command "reattach-to-user-namespace -l bash"
 
 #tmux display in 256 colors
 set -g default-terminal "screen-256color"
