using tmux on tier3 now

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,10 @@ unbind %
 #bind M \
 #    set -g mouse off \;\
 #    display 'Mouse: OFF'
+
+#if there is no session when running 'tmux attach' make a new one
+new-session -n $HOST
+
 # enable vi-style movement and copy/pasting
 set-window-option -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
