--- a/tmux.conf
+++ b/tmux.conf
@@ -40,4 +40,7 @@ set -g default-terminal "screen-256color"
 set -g history-limit 20000
 
 #automatically renumber tmux windows
-set -g renumber-windows on
+#set -g renumber-windows on
+#do it the old way...
+set -g base-index 1
+setw -g pane-base-index 1
