--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 # config file for tmux
+set-option -g default-shell /bin/bash
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
@@ -30,6 +31,12 @@ set -g history-limit 20000
 #do it the old way...
 set -g base-index 1
 setw -g pane-base-index 1
+
+# new window and retain cwd
+bind c new-window -c "#{pane_current_path}"
+
+# Prompt to rename window right after it's created
+set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 #set -g mouse on
