--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,9 @@ bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
+#renumber windows 
+set-option -g renumber-windows on
+
 #tmux display in 256 colors
 set -g default-terminal "screen-256color"
 
