--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 # config file for tmux
-set-option -g default-shell /bin/bash
+set -g default-command "${SHELL}"
+# set-option -g default-shell /bin/bash
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
